--- a/csss.css
+++ b/csss.css
@@ -9,14 +9,31 @@
 .slider{
     margin-top: 10px;
     margin-bottom: 30px;
+	max-width: 1170px;
+	margin: auto;
 	position: relative;
-	width: 100%;
 	background: #2c3e50; /* darckblue */
 }
 .myslide{
-	height: 655px;
+	position: relative;
+	width: 100%;
+	max-width: 1170px;
+	padding-bottom: 56.25%;
+	height: 0;
 	display: none;
 	overflow: hidden;
+}
+
+.myslide iframe{
+  position: absolute;
+  top:0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.fade{
+	opacity: 1;
 }
 
 .prev, .next{
@@ -45,12 +62,12 @@
 
 
 
-@media screen and (max-width: 800px){
+/* @media screen and (max-width: 800px){
 	.myslide{
 		height: 500px;
 	}
 
-}
+} */
 
 
 
