--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@ a:active {
 # Header Bar
 --------------------------------*/
 .top-header-bar {
-  background: linear-gradient( 270deg, rgba(255, 90, 0, 1) 0%, #4169e1 100% );
+  background: linear-gradient(270deg, rgba(255, 90, 0, 1) 0%, #4169e1 100%);
   color: #fff;
 }
 
@@ -65,19 +65,18 @@ a:active {
   color: #fff;
   text-decoration: none;
 }
-.top-header-bar .container .row a.icon{
+.top-header-bar .container .row a.icon {
   margin-left: 80px;
   margin-right: 10px;
-  }
+}
 
-.top-header-bar .container .row a i{
-    padding: 9px;
-    margin-left: 10px;
-    color: black;
-    background-color: #fff;
-    border-radius: 50px;
-
- }
+.top-header-bar .container .row a i {
+  padding: 9px;
+  margin-left: 10px;
+  color: black;
+  background-color: #fff;
+  border-radius: 50px;
+}
 
 /*
 # Header Bar Text
@@ -2174,9 +2173,9 @@ ul.tabs-nav .tab-nav.active {
   position: relative;
   padding: 96px 0 90px;
   font-weight: 500;
-  color: #929191;
-  background: url("images/foot-bg.jpg") no-repeat center;
-  background-size: cover;
+  color: #1e2833;
+  /* background: url("images/foot-bg.jpg") no-repeat center; */
+  /* background-size: cover; */
   z-index: 99;
 }
 
@@ -2188,17 +2187,18 @@ ul.tabs-nav .tab-nav.active {
   z-index: -1;
   width: 100%;
   height: 101%;
-  background: rgba(22, 22, 22, 0.92);
+  background: #f5fffa;
 }
 
 .footer-widgets h2 {
   margin-bottom: 40px;
+  margin-top: 40px;
   font-size: 18px;
-  color: #fff;
+  color: #1e2833;
 }
 
 .footer-widgets ul {
-  padding: 12px 0 0;
+  padding: 0px 0 0;
   margin: 0;
   list-style: none;
 }
@@ -2209,18 +2209,14 @@ ul.tabs-nav .tab-nav.active {
 }
 
 .footer-widgets ul li a {
-  color: #a2a1a1;
+  color: #1e2833;
   text-decoration: none;
 }
 
 .footer-widgets ul li a:hover {
-  color: #4169e1;
-}
-
-.foot-about p {
-  font-size: 14px;
-  line-height: 2;
-  color: #929191;
+  /* color: #4169e1; */
+  color: #1e2833;
+  padding-left: 5px;
 }
 
 .foot-about ul li {
@@ -2229,20 +2225,6 @@ ul.tabs-nav .tab-nav.active {
 
 .foot-about ul li a {
   color: #fff;
-}
-
-.foot-latest-news ul li {
-  display: block;
-  margin-bottom: 36px;
-}
-
-.foot-latest-news ul li h3 {
-  font-size: 14px;
-}
-
-.foot-latest-news ul li .posted-date {
-  font-size: 12px;
-  color: #4169e1;
 }
 
 .foot-contact ul li {
@@ -2261,6 +2243,26 @@ ul.tabs-nav .tab-nav.active {
 
 .foot-contact ul li span {
   width: calc(100% - 3px);
+}
+
+.foot-logo img {
+  width: 213px;
+}
+
+.footer-bar {
+  padding: 30px 0;
+  font-size: 12px;
+  color: #7b7b7b;
+  background: #131212;
+  text-align: center;
+}
+
+.col-12.col-md-6.col-lg-3.mt-5.mt-md-0 {
+  margin-left: auto;
+}
+
+footer {
+  margin-top: 30px;
 }
 
 /*
@@ -2297,16 +2299,4 @@ ul.tabs-nav .tab-nav.active {
   color: #fff;
   cursor: pointer;
   outline: none;
-}
-
-.footer-bar {
-  padding: 30px 0;
-  font-size: 12px;
-  color: #7b7b7b;
-  background: #131212;
-  text-align: center;
-}
-
-footer{
-  margin-top: 30px;
 }
