--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@ html{
 }
 
 body{
-  background-color: #eee;
+  background-color: white;
   justify-content: center;
   align-items: center;
   min-height: 100vh;
@@ -50,6 +50,7 @@ body{
 }
 
 .card-content{
+  background-color: #eee;
   padding: 1rem;
 }
 
