--- a/style.css
+++ b/style.css
@@ -6,9 +6,9 @@ body {
   line-height: 1.8;
   font-family: "Montserrat", sans-serif;
 }
-img {
+/* img {
   vertical-align: baseline;
-}
+} */
 
 /*--------------------------------------------------------------
 # Links
@@ -65,17 +65,57 @@ a:active {
   color: #fff;
   text-decoration: none;
 }
-.top-header-bar .container .row a.icon {
-  margin-left: 80px;
+.top-header-bar .container a.icon {
+  /* margin-left: 80px; */
   margin-right: 10px;
 }
 
-.top-header-bar .container .row a i {
+.top-header-bar .container  a i {
   padding: 9px;
   margin-left: 10px;
   color: black;
   background-color: #fff;
   border-radius: 50px;
+}
+
+.social-icons {
+  padding: 15px;
+  gap: 5px;
+  display: flex;
+  flex-flow: row-reverse wrap;
+  text-align: right;
+}
+
+.social-icons a {
+  font-family: "FontAwesome";
+  color: white;
+  text-decoration: none;
+}
+
+.social-icons a i {
+  font-family: "FontAwesome";
+  -webkit-transition: all 200ms ease-in;
+  -webkit-transform: scale(1);
+  -ms-transition: all 200ms ease-in;
+  -ms-transform: scale(1);
+  -moz-transition: all 200ms ease-in;
+  -moz-transform: scale(1);
+  transition: all 200ms ease-in;
+  transform: scale(1);
+}
+
+.social-icons a:hover i {
+  font-family: "FontAwesome";
+  box-shadow: 0px 0px 150px #000000;
+  z-index: 2;
+  -webkit-transition: all 200ms ease-in;
+  -webkit-transform: scale(1.5);
+  -ms-transition: all 200ms ease-in;
+  -ms-transform: scale(1.5);
+  -moz-transition: all 200ms ease-in;
+  -moz-transform: scale(1.5);
+  transition: all 200ms ease-in;
+  transform: scale(1.5);
 }
 
 /*
@@ -243,7 +283,7 @@ a:active {
 
 .site-navigation ul li a:hover,
 .site-navigation ul li.current-menu-item a {
-  border-bottom: 3px solid #4169e1;
+  /* border-bottom: 3px solid #4169e1; */
   color: #4169e1;
 }
 
