--- a/style.css
+++ b/style.css
@@ -70,7 +70,7 @@ a:active {
   margin-right: 10px;
 }
 
-.top-header-bar .container  a i {
+.top-header-bar .container a i {
   padding: 9px;
   margin-left: 10px;
   color: black;
@@ -2289,55 +2289,66 @@ ul.tabs-nav .tab-nav.active {
   width: 100%;
   height: 100%;
 }
+@media (min-width: 994px) {
+  .foot-logo img {
+    width: 160%;
+    height: 100%;
+    margin-left: -16%;
+  }
 
-.footer-bar {
-  padding: 30px 0;
-  font-size: 12px;
-  color: #7b7b7b;
-  background: #131212;
-  text-align: center;
-}
+  .footer-bar {
+    padding: 30px 0;
+    font-size: 12px;
+    color: #7b7b7b;
+    background: #131212;
+    text-align: center;
+  }
 
-.col-12.col-md-6.col-lg-3.mt-5.mt-md-0 {
-  margin-left: auto;
-}
+  .col-12.col-md-6.col-lg-3.mt-5.mt-md-0 {
+    margin-left: auto;
+  }
 
-footer {
-  margin-top: 30px;
-}
+  .footer-bar .container .last {
+    flex-flow: column wrap;
+  }
 
-/*
+  footer {
+    margin-top: 30px;
+  }
+
+  /*
 # Subscribe
 --------------------------------*/
-.subscribe-form {
-  margin-top: 50px;
-}
+  .subscribe-form {
+    margin-top: 50px;
+  }
 
-.subscribe-form input[type="email"] {
-  width: calc(100% - 70px);
-  padding: 12px 16px;
-  border: 0;
-  font-size: 12px;
-  line-height: 1;
-  background: #fff;
-  color: #131212;
-  outline: none;
-}
+  .subscribe-form input[type="email"] {
+    width: calc(100% - 70px);
+    padding: 12px 16px;
+    border: 0;
+    font-size: 12px;
+    line-height: 1;
+    background: #fff;
+    color: #131212;
+    outline: none;
+  }
 
-.subscribe-form input[type="email"]::placeholder {
-  color: #9b9a9a;
-  font-style: italic;
-}
+  .subscribe-form input[type="email"]::placeholder {
+    color: #9b9a9a;
+    font-style: italic;
+  }
 
-.subscribe-form input[type="submit"] {
-  width: 68px;
-  padding: 13px 0 14px;
-  border: 0;
-  font-size: 12px;
-  line-height: 1;
-  text-transform: uppercase;
-  background: #4169e1;
-  color: #fff;
-  cursor: pointer;
-  outline: none;
+  .subscribe-form input[type="submit"] {
+    width: 68px;
+    padding: 13px 0 14px;
+    border: 0;
+    font-size: 12px;
+    line-height: 1;
+    text-transform: uppercase;
+    background: #4169e1;
+    color: #fff;
+    cursor: pointer;
+    outline: none;
+  }
 }
