--- a/style.css
+++ b/style.css
@@ -2289,6 +2289,15 @@ ul.tabs-nav .tab-nav.active {
   width: 100%;
   height: 100%;
 }
+
+footer h6{
+  margin-top: 10px;
+  font-size: 1em;
+}
+footer a{
+  margin: auto;
+}
+
 @media (min-width: 994px) {
   .foot-logo img {
     width: 160%;
